# node-songbird

./: .gitignore  Cargo.toml  README.md  package.json
src/: call.rs  input.rs  lib.rs  manager.rs  player.rs  shards.rs  track_handle.rs
src/driver/: mod.rs  shards.rs
test/: package.json  tsconfig.json
test/src/: index.ts
