[package]
edition = "2021"
name = "node-songbird"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.10.1", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.9.1"
env_logger = "0.9.3"
reqwest = "0.11.12"
async-trait = "0.1"

[dependencies.songbird]
features = ["driver", "rustls", "gateway"]
default-features = false
git = "https://github.com/serenity-rs/songbird"
branch = "next"

[dependencies.symphonia]
features = ["aac", "mp3", "isomp4", "alac", "mkv"] # ...as well as any extras you need!
git = "https://github.com/FelixMcFelix/Symphonia"
branch = "songbird-fixes"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
